Fixed event image overflow

--- a/src/web/assets/scss/style.scss
+++ b/src/web/assets/scss/style.scss
@@ -660,6 +660,7 @@ html {
     .tribe-events-event-image {
       position: relative;
       width: 100%;
+      overflow: hidden;
 
       &:before {
         display: block;
